add TravisCI build status icon

--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
   		"karma": "~0.8"
 	},
 	"scripts": {
-	   "test": "./node_modules/.bin/karma start --single-run --browsers Chrome"
+	   "test": "./node_modules/.bin/karma start --single-run --browsers PhantomJS"
 	}
 }
