--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "Jasper",
-  "version": "0.8.0",
+  "name": "jasper",
+  "version": "1.0.0",
   "description": "A lightweight interactive assessment tool for JavaScript candidates.",
   "homepage": "http://kalisjoshua.github.io/Jasper/",
   "repository": {
     "type": "git",
     "url": "https://github.com/kalisjoshua/Jasper.git"
   },
-	"devDependencies": {
-    "karma": "~0.8"
-	},
-	"scripts": {
-    "test": "./node_modules/.bin/karma start --single-run --browsers PhantomJS"
-	}
+  "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "babel-jest": "^29.5.0",
+    "http-server": "^14.1.1",
+    "jest": "^29.5.0"
+  },
+  "scripts": {
+    "start": "http-server .",
+    "test": "jest --config=jest.config.js"
+  }
 }
